--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 **/medpredictor/src/models/*
 **/medpredictor/model-metrics/*
 **/medpredictor/src/data_codified/*
+**/medpredictor/src/answers/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
